frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
 type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30004
