frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontendd
spec:
  ingressClassName: "nginx"
  rules:
  - host: "todoapp.com"
    http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 8080
